# BLEAPER

./: .gitignore  BLEAPER.sln  CMakeLists.txt  README.md  sconstruct
.github/workflows/: BLEAPER.yml
BLEAPER/: BLEAPER.cpp  BLEAPER.h  BLEAPER.vcxproj  BLEAPER.vcxproj.filters  MidiDeviceService.cpp  MidiDeviceService.h
include/reaper/: reaper_plugin.h  reaper_plugin_functions.h
src/: BLEAPER.cpp  BLEAPER.h  BLEAPER.rc  CMakeLists.txt  MidiDeviceService.cpp  MidiDeviceService.h  MidiDeviceWatcher.cpp  MidiDeviceWatcher.h  RTMidiIn.cpp  resource.h  sconscript
