set(BLEAPER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/BLEAPER.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MidiDeviceService.cpp
)

set(BLEAPER_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/BLEAPER.h
    ${CMAKE_CURRENT_SOURCE_DIR}/MidiDeviceService.h
)

set(BLEAPER_LIBS
    WindowsApp
)

add_library(BLEAPER SHARED
    ${BLEAPER_HEADERS}
    ${BLEAPER_SOURCES}
)

target_link_libraries(BLEAPER ${BLEAPER_LIBS})

target_include_directories(BLEAPER PUBLIC ${CMAKE_SOURCE_DIR}/include)

set_target_properties(BLEAPER PROPERTIES PREFIX "")
set_target_properties(BLEAPER PROPERTIES OUTPUT_NAME "reaper_BLEAPER")

if (CMAKE_BUILD_TYPE MATCHES DEBUG)
    add_definitions(-DCALLBACK_DIAGNOSTICS -DCONNECTION_DIAGNOSTICS -DDEBUG_DIAGNOSTICS -DBASIC_DIAGNOSTICS)
endif()

set(REAPER_USERPLUGINS "REAPER\\UserPlugins")

install(TARGETS BLEAPER 
    RUNTIME DESTINATION ${REAPER_USERPLUGINS}
    LIBRARY DESTINATION ${REAPER_USERPLUGINS}
)
